--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
       <meta name="description" content="">
         <meta name="author" content="www.dethemes.com">
-        <title>GERRARD &amp; DIANNE</title>
+        <title>TIM &amp; IRINA</title>
         
         <link rel="icon" href="images/favicon.jpg">
         <!-- Bootstrap -->
@@ -90,7 +90,7 @@
                                       <h1>WE ARE GETTING MARRIED</h1>
                                     </div>                                       
                                     <div id="banner-date">
-                                      - AUGUST / 19TH / 2015 -
+                                      - JUNE / ??TH / 2016 -
                                     </div>     
                                     
                 </div> 
