Fix a 404 error with a bad image URL. Not sure if the right image for first meeting.

--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,7 @@
               <div class="photo-item frame-border animation delay1 fadeInLeft">
 
                 <!--PHOTO-->
-                <img src="http://res.cloudinary.com/dlpep2th5/image/upload/v1453521612/545808_10151049585414103_248205375_n_ygxqqo.jpg" alt="" class="hover-animation image-zoom-in">
+                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/v1453585510/IMG_5922_di3wus.jpg" alt="" class="hover-animation image-zoom-in">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -359,7 +359,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/v1453521612/545808_10151049585414103_248205375_n_ygxqqo.jpg" class="magnific-zoom" title="Our First Met">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/v1453585510/IMG_5922_di3wus.jpg" class="magnific-zoom" title="Our First Met">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
