--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,7 @@
               <div class="photo-item frame-border animation delay1 fadeInLeft">
 
                 <!--PHOTO-->
-                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/v1453585510/IMG_5922_di3wus.jpg" alt="" class="hover-animation image-zoom-in">
+                <img src="https://res.cloudinary.com/dlpep2th5/image/upload/v1453521612/TimAndIrinaFirstDate07272012.jpg" alt="" class="hover-animation image-zoom-in">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -359,7 +359,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/v1453585510/IMG_5922_di3wus.jpg" class="magnific-zoom" title="Our First Met">
+                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/v1453521612/TimAndIrinaFirstDate07272012.jpg" class="magnific-zoom" title="Our First Date">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -385,7 +385,7 @@
             </div>
 
             <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
-              <h3>OUR FIRST MET</h3>
+              <h3>OUR FIRST DATE</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
                 mauris non hendrerit faucibus. Proin pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
             </div>
