HTTPS placeholders and fonts

--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
     <!-- Icon -->
     <link rel="stylesheet" href="css/fonts/fontello/css/fontello.css" type="text/css" media="screen" />
     <!-- Font -->
-    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
     <link href="css/style.css" rel="stylesheet" media="screen">
@@ -404,7 +404,7 @@
               <div class="photo-item frame-border animation delay1 fadeInLeft">
 
                 <!--PHOTO OUR FIRST DATING-->
-                <img src="http://placehold.it/290x290" alt="" class="hover-animation image-zoom-in">
+                <img src="https://placehold.it/290x290" alt="" class="hover-animation image-zoom-in">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -416,7 +416,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="http://placehold.it/700x467" class="magnific-zoom" title="Our First Dating">
+                      <a href="https://placehold.it/700x467" class="magnific-zoom" title="Our First Dating">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -994,7 +994,7 @@
               <div class="photo-item frame-border animation fadeIn">
 
                 <!--PHOTO-->
-                <img src="http://placehold.it/290x290" alt="" class="hover-animation image-zoom-rotate">
+                <img src="https://placehold.it/290x290" alt="" class="hover-animation image-zoom-rotate">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1006,7 +1006,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="http://placehold.it/700x467" class="magnific-zoom-gallery" title="Attachment-8">
+                      <a href="https://placehold.it/700x467" class="magnific-zoom-gallery" title="Attachment-8">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -1028,7 +1028,7 @@
               <div class="photo-item frame-border animation fadeIn">
 
                 <!--PHOTO-->
-                <img src="http://placehold.it/290x290" alt="" class="hover-animation image-zoom-rotate">
+                <img src="https://placehold.it/290x290" alt="" class="hover-animation image-zoom-rotate">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1040,7 +1040,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="http://placehold.it/700x467" class="magnific-zoom-gallery" title="Attachment-9">
+                      <a href="https://placehold.it/700x467" class="magnific-zoom-gallery" title="Attachment-9">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -1338,7 +1338,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1350,7 +1350,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1391,7 +1391,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1403,7 +1403,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1444,7 +1444,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1456,7 +1456,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1496,7 +1496,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1508,7 +1508,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1549,7 +1549,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1561,7 +1561,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1602,7 +1602,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1614,7 +1614,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1652,7 +1652,7 @@
 
       <!-- PHOTO DIVIDER -->
       <section id="photo-divider-3">
-        <div class="image-divider fixed-height" style="background-image:url(http://placehold.it/1920x1080); height:450px" data-stellar-background-ratio="0.3">
+        <div class="image-divider fixed-height" style="background-image:url(https://placehold.it/1920x1080); height:450px" data-stellar-background-ratio="0.3">
         </div>
       </section>
 
@@ -1697,7 +1697,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO NATASHA REMPE-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1709,7 +1709,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1803,7 +1803,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1815,7 +1815,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1856,7 +1856,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1868,7 +1868,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1909,7 +1909,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1921,7 +1921,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="http://placehold.it/293x325" class="magnific-zoom">
+                        <a href="https://placehold.it/293x325" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
@@ -1962,7 +1962,7 @@
             <!--div class="photo-item frame-border animation fadeIn"-->
 
             <!--PHOTO-->
-            <!--img src="http://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate"-->
+            <!--img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate"-->
 
             <!--PHOTO OVERLAY-->
             <!--div class="layer wh100 hidden-black-overlay hover-animation fade-in"-->
@@ -1974,7 +1974,7 @@
             <!--div class="alignment"-->
             <!--div class="v-align center-middle"-->
 
-            <!--a href="http://placehold.it/293x325" class="magnific-zoom">
+            <!--a href="https://placehold.it/293x325" class="magnific-zoom">
                               <div class="de-icon circle light medium-size inline">
                                   <i class="de-icon-zoom-in"></i>
                                 </div>
@@ -2042,19 +2042,19 @@
             <div class="col-md-offset-1 col-md-10 text-center">
               <div id="registry-logo" class="owl-carousel">
                 <div class="item">
-                  <a href="#"> <img src="http://placehold.it/249x67" alt=""> </a>
+                  <a href="#"> <img src="https://placehold.it/249x67" alt=""> </a>
                 </div>
                 <div class="item">
-                  <a href="#"> <img src="http://placehold.it/249x67" alt=""> </a>
+                  <a href="#"> <img src="https://placehold.it/249x67" alt=""> </a>
                 </div>
                 <div class="item">
-                  <a href="#"> <img src="http://placehold.it/249x67" alt=""> </a>
+                  <a href="#"> <img src="https://placehold.it/249x67" alt=""> </a>
                 </div>
                 <div class="item">
-                  <a href="#"> <img src="http://placehold.it/249x67g" alt=""> </a>
+                  <a href="#"> <img src="https://placehold.it/249x67g" alt=""> </a>
                 </div>
                 <div class="item">
-                  <a href="#"> <img src="http://placehold.it/249x67" alt=""> </a>
+                  <a href="#"> <img src="https://placehold.it/249x67" alt=""> </a>
                 </div>
               </div>
             </div>
