--- a/public/index.html
+++ b/public/index.html
@@ -604,15 +604,13 @@
             <div class="col-md-offset-2 col-md-8 text-center">
 
               <div class="section-title animation fadeInUp">
-                <h2>
-                                WHERE <span class="and">&amp;</span> WHERE
-                              </h2>
+                <h2>WHERE&nbsp;<span class="and">&amp;</span>&nbsp;WHEN</h2>
 
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
-                  faucibus. Proin pulvinar congue ex, vitae
+                  We look forward to sharing our special day with you where we'll
+                  blend the best of magnificent North Carolina mountain
+                  vistas with the excitement and charm of downtown Asheville.
                 </p>
-
 
               </div>
             </div>
@@ -629,15 +627,15 @@
 
                 <div class="row">
                   <div class="col-md-4">
-                    <h3>JULY / 9TH / 2016</h3>
+                    <h3>JULY 9, 2016</h3>
                   </div>
                   <div class="col-md-4">
                     <div class="border-column">
-                      <h3>TBD IN THE EVENING</h3>
+                      <h3>THREE O'CLOCK IN THE AFTERNOON</h3>
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <h3>THE RIDGE </h3>
+                    <h3>'THE RIDGE'</h3>
                   </div>
 
                 </div>
@@ -657,26 +655,37 @@
               <div class="de-icon circle small-size inline" style="background-color:#f0394d">
                 <i class="de-icon-bell-alt"></i>
               </div>
+
               <h3 class="inline">CEREMONY</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
-                mauris non hendrerit faucibus. Proin pulvinar congue</p>
+              <p>The wedding ceremony will take place promptly at 3pm near the beautiful
+                former private residence known as 'The Ridge'. It is approximately 26
+                miles and a 35 minute drive to The Ridge from downtown Asheville. Please
+                plan on departing for 'The Ridge' at least one hour prior to the ceremony.</p>
+              <br>
+
+              <p>
+                <b>The Ridge</b><br>
+                389 Upper Thomas Branch Rd.<br>
+                Marshall, NC 28753<br><br>
+                <a href='https://www.google.com/maps/dir//389+Upper+Thomas+Branch+Rd,+Marshall,+NC+28753/@35.859003,-82.7334927,17z/data=!4m13!1m4!3m3!1s0x885a2557634fe5c5:0x35280f975e6a18c2!2s389+Upper+Thomas+Branch+Rd,+Marshall,+NC+28753!3b1!4m7!1m0!1m5!1m1!1s0x885a2557634fe5c5:0x35280f975e6a18c2!2m2!1d-82.731304!2d35.859003' target='_blank'>Click for Directions to 'The Ridge'</a>
+              </p>
 
               <div class="de-icon circle small-size inline" style="background-color:#f6700e">
                 <i class="de-icon-food"></i>
               </div>
               <h3 class="inline">RECEPTION</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
-                mauris non hendrerit faucibus. Proin pulvinar congue</p>
+              <p>The wedding reception will take place in downtown Asheville, NC following the ceremony.</p>
+              <br>
 
-              <div class="de-icon circle small-size inline" style="background-color:#0d9a48">
-                <i class="de-icon-home-1"></i>
-              </div>
-              <h3 class="inline">ACCOMODATION</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
-                mauris non hendrerit faucibus. Proin pulvinar congue</p>
+              <p>
+                <b><a href="http://packstavern.com/centuryroom/" target="_blank">Pack's Tavern Century Room on the Park</a></b><br>
+                20 South Spruce St.<br>
+                Asheville, NC 28801<br>
+                +1 (828) 225-6944<br><br>
+                <a href='https://www.google.com/maps/dir//20+S+Spruce+St,+Asheville,+NC+28801/@35.59513,-82.5518367,17z/data=!4m13!1m4!3m3!1s0x8859f3584a97e195:0x930311f63a832a8a!2s20+S+Spruce+St,+Asheville,+NC+28801!3b1!4m7!1m0!1m5!1m1!1s0x8859f3584a97e195:0x930311f63a832a8a!2m2!1d-82.549648!2d35.59513' target='_blank'>Click for Directions to Pack's Tavern</a>
+              </p>
 
             </div>
-
 
             <div class="col-md-6 animation fadeIn">
               <div id="map-canvas" style="border:15px solid #FFF; margin-top:20px;"></div>
@@ -684,8 +693,6 @@
 
           </div>
           <!-- END of ROW-3 -->
-
-
 
         </div>
       </section>
@@ -1194,7 +1201,7 @@
                       <div class="alignment">
                         <div class="v-align center-middle">
 
-                          <a href="https://res.cloudinary.com/dlpep2th5/image/upload/v1456116164/favorites-0031-f61321708686f4678a4d89c748dc8aec_hjm513.jpg" class="magnific-zoom" title="The Ridge. Address: 389 Upper Thomas Branch Rd. Marshall, NC.">
+                          <a href="https://res.cloudinary.com/dlpep2th5/image/upload/v1456116164/favorites-0031-f61321708686f4678a4d89c748dc8aec_hjm513.jpg" class="magnific-zoom" title="The Ridge. Address: 389 Upper Thomas Branch Rd. Marshall, NC">
                             <div class="de-icon circle light medium-size inline">
                               <i class="de-icon-zoom-in"></i>
                             </div>
@@ -2221,14 +2228,13 @@
     <!-- Owl Carousel -->
     <script src="js/owlcarousel/owl.carousel.js"></script>
     <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerwithlabel/src/markerwithlabel.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
     <!-- RSVP -->
     <script src="js/rsvp/rsvp.js"></script>
 
     <!-- Custom Core Script -->
     <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/map-script.js"></script>
+    <script type="text/javascript" src="js/new-map-script.js"></script>
     <!-- Custom Additional Script -->
     <script type="text/javascript" src="js/main-slider-fade.js"></script>
 
