Spell out the full date

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
                     <h1>WE ARE GETTING MARRIED</h1>
                   </div>
                   <div id="banner-date">
-                    - JULY / 9TH / 2016 -
+                    - SATURDAY JULY 9, 2016 -
                   </div>
 
                 </div>
