Tweak the details of the event time

--- a/public/index.html
+++ b/public/index.html
@@ -631,7 +631,7 @@
                   </div>
                   <div class="col-md-4">
                     <div class="border-column">
-                      <h3>THREE O'CLOCK IN THE AFTERNOON</h3>
+                      <h3>FOUR O'CLOCK IN THE AFTERNOON</h3>
                     </div>
                   </div>
                   <div class="col-md-4">
@@ -657,11 +657,13 @@
               </div>
 
               <h3 class="inline">CEREMONY</h3>
-              <p>The wedding ceremony will take place promptly at 3pm near the beautiful
+              <p>The wedding ceremony will take place promptly at 4pm near the beautiful
                 former private residence known as 'The Ridge'. It is approximately 26
                 miles and a 35 minute drive to The Ridge from downtown Asheville. Please
-                plan on departing for 'The Ridge' at least one hour prior to the ceremony.</p>
-              <br>
+                plan on departing for 'The Ridge' at least one hour prior to the ceremony.
+              </p>
+
+              <p>Please join us for cocktails on The Ridge immediately following the ceremony.</p>
 
               <p>
                 <b>The Ridge</b><br>
@@ -674,8 +676,11 @@
                 <i class="de-icon-food"></i>
               </div>
               <h3 class="inline">RECEPTION</h3>
-              <p>The wedding reception will take place in downtown Asheville, NC following the ceremony.</p>
-              <br>
+              <p>The wedding reception will take place in downtown Asheville
+                starting at 6:30 PM following the ceremony and cocktails.
+              </p>
+
+              <p>We hope you'll join us downstairs at Pack's Tavern when midnight strikes!</p>
 
               <p>
                 <b><a href="http://packstavern.com/centuryroom/" target="_blank">Pack's Tavern Century Room on the Park</a></b><br>
