--- a/public/index.html
+++ b/public/index.html
@@ -2102,7 +2102,7 @@
               <!-- Show Message -->
             </div>
 
-            <form method="post" action="rsvp.php" id="rsvpform">
+            <form method="post" action="https://aqueous-journey-93402.herokuapp.com/rsvp" id="rsvpform">
               <div class="col-md-6">
                 <div id="fullname" class="form-group">
                   <label for="inputname">*NAME</label>
@@ -2113,14 +2113,14 @@
                   <input type="email" class="form-control ajax-input" id="inputemail" placeholder="" data-required="Email Required" data-output-label="Output Email">
                 </div>
                 <div id="events" class="form-group">
-                  <label for="inputevents">*I WILL ATTEND TO</label>
-                  <select multiple id="inputevents" class="form-control ajax-input" data-required="Please Select Events" data-output-label="Output Events">
-                    <option>Ransom</option>
-                    <option>Rehearsal</option>
-                    <option>Rehearsal Dinner</option>
-                    <option>Ceremony</option>
-                    <option>The Party</option>
-                  </select>
+                  <label for="inputevents">*I WILL ATTEND:</label>
+                  <div id="inputevents">
+                    <label for="ransom"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendRansom" name="inputRansom" value="Ransom"/> Ransom</label><br>
+                    <label for="rehearsal"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendRehearsal" name="inputRehearsal" value="Rehearsal"/> Rehearsal</label><br>
+                    <label for="rehearsalDinner"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendRehearsalDinner" name="inputRehearsalDinner" value="Rehearsal Dinner"/> Rehearsal Dinner</label><br>
+                    <label for="ceremony"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendCeremony" name="inputCeremony" value="Ceremony"/> Ceremony</label><br>
+                    <label for="reception"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendReception" name="inputReception" value="Reception"/> Reception</label>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
