Add photos and update README

--- a/public/index.html
+++ b/public/index.html
@@ -257,7 +257,7 @@
               <div class="photo-item frame-border animation fadeInRight">
 
                 <!--PHOTO-->
-                <img src="https://cloudinary.com/console/media_library/show_backup?public_id=IMG_3908_i4agol&resource_type=image&type=upload&version=1456113118.jpg" alt="" class="hover-animation image-zoom-in">
+                <img src="http://res.cloudinary.com/dlpep2th5/image/upload/v1456193198/photo_ej1n6a.jpg" alt="" class="hover-animation image-zoom-in">
 
                 <!--PHOTO OVERLAY-->
                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -269,7 +269,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://res.cloudinary.com/dlpep2th5/image/upload/v1453644270/IMG_3908_i4agol.jpg" class="magnific-zoom">
+                      <a href="http://res.cloudinary.com/dlpep2th5/image/upload/v1456192244/photo_ej1n6a.jpg" class="magnific-zoom">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -1709,7 +1709,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO NATASHA REMPE-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_325,w_293/v1456190171/2015-02-01_14.40.19_oocasm.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1762,7 +1762,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO NATALIE ERNST-->
-                  <img src="https://res.cloudinary.com/dlpep2th5/image/upload/v1453676453/2015-02-01_14.40.19_oocasm.jpg" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_325,w_293/v1456190171/2015-02-01_14.40.19_oocasm.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1805,7 +1805,7 @@
 
 
 
-            <!--BRIDESMAID-3-->
+            <!--BRIDESMAID-3-PAOLA-->
             <div class="col-md-4">
 
               <!--BRIDESMAID-ITEM-->
@@ -1815,7 +1815,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_325,w_293/v1456190583/FullSizeRender_k9l6f9.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1858,7 +1858,7 @@
 
 
 
-            <!--BRIDESMAID-4-->
+            <!--BRIDESMAID-4 - ILONA-->
             <div class="col-md-4">
 
               <!--BRIDESMAID-ITEM-->
@@ -1868,7 +1868,7 @@
                 <div class="photo-item frame-border animation fadeIn">
 
                   <!--PHOTO-->
-                  <img src="https://placehold.it/293x325" alt="" class="hover-animation image-zoom-rotate">
+                  <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_scale,h_325,w_293/v1456190583/FullSizeRender_k9l6f9.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1880,7 +1880,7 @@
                     <div class="alignment">
                       <div class="v-align center-middle">
 
-                        <a href="https://placehold.it/293x325" class="magnific-zoom">
+                        <a href="http://res.cloudinary.com/dlpep2th5/image/upload/v1456189658/FullSizeRender_k9l6f9.jpg" class="magnific-zoom">
                           <div class="de-icon circle light medium-size inline">
                             <i class="de-icon-zoom-in"></i>
                           </div>
