Remove the advertising from the meta

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="">
-    <meta name="author" content="www.dethemes.com">
+    <meta name="description" content="Tim &amp; Irina's Wedding">
     <title>Tim&nbsp;&amp;&nbsp;Irina's Wedding</title>
 
     <link rel="icon" href="images/favicon.jpg">
