--- a/public/index.html
+++ b/public/index.html
@@ -411,7 +411,7 @@
                   <div class="alignment">
                     <div class="v-align center-middle">
 
-                      <a href="https://placehold.it/700x467" class="magnific-zoom" title="Our First Dating">
+                      <a href="https://placehold.it/700x467" class="magnific-zoom" title="Our First Date">
                         <div class="de-icon circle light medium-size inline">
                           <i class="de-icon-zoom-in"></i>
                         </div>
@@ -437,7 +437,7 @@
             </div>
 
             <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-              <h3>OUR FIRST DATING</h3>
+              <h3>OUR FIRST DATE</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam
                 mauris non hendrerit faucibus. Proin pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
             </div>
