--- a/public/index.html
+++ b/public/index.html
@@ -2086,7 +2086,7 @@
                               </h2>
 
                 <p>
-                  We are so excited to share our special day with you! Please RSVP and fill out the questions below so we can best accommodate you!
+                  We are so excited to share our special day with you! Please RSVP using the form below before June 9th, 2016 so we can best accommodate you!
                 </p>
 
 
@@ -2104,27 +2104,28 @@
             <form method="post" action="https://aqueous-journey-93402.herokuapp.com/rsvp" id="rsvpform">
               <div class="col-md-6">
                 <div id="fullname" class="form-group">
-                  <label for="inputname">*NAME</label>
+                  <label for="inputname">NAME *</label>
                   <input type="text" class="form-control ajax-input" id="inputname" placeholder="" data-required="Name Required" data-output-label="Output Name">
                 </div>
                 <div id="email" class="form-group">
-                  <label for="inputemail">*EMAIL</label>
+                  <label for="inputemail">EMAIL *</label>
                   <input type="email" class="form-control ajax-input" id="inputemail" placeholder="" data-required="Email Required" data-output-label="Output Email">
                 </div>
                 <div id="events" class="form-group">
-                  <label for="inputevents">*I WILL ATTEND:</label>
+                  <label for="inputevents">ATTENDING *</label>
                   <div id="inputevents">
-                    <label for="ransom"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendRansom" name="inputRansom" value="Ransom"/> Ransom</label><br>
-                    <label for="rehearsal"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendRehearsal" name="inputRehearsal" value="Rehearsal"/> Rehearsal</label><br>
+                    <label for="ransom"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendRansom" name="inputRansom" value="Ransom"/> Bride's Ransom</label><br>
+                    <label for="rehearsal"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendRehearsal" name="inputRehearsal" value="Rehearsal"/> Ceremony Rehearsal</label><br>
                     <label for="rehearsalDinner"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendRehearsalDinner" name="inputRehearsalDinner" value="Rehearsal Dinner"/> Rehearsal Dinner</label><br>
-                    <label for="ceremony"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendCeremony" name="inputCeremony" value="Ceremony"/> Ceremony</label><br>
-                    <label for="reception"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendReception" name="inputReception" value="Reception"/> Reception</label>
+                    <label for="ceremony"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendCeremony" name="inputCeremony" value="Ceremony"/> Wedding Ceremony</label><br>
+                    <label for="reception"><input type="checkbox" class="ajax-input ajax-checkbox" id="attendReception" name="inputReception" value="Reception"/> Wedding Reception</label>
                   </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="inputmessage">LEAVE YOUR MESSAGE</label>
+                  <label for="inputmessage">OTHERS/LEAVE US A MESSAGE</label><br>
+                  <small>If your invitation included a +1 guest or is a family invitation please write in the full formal names of each of those individuals, and please also note which events they plan to attend. If you have any comments or questions we'd love to hear from you!</small>
                   <textarea id="inputmessage" class="form-control ajax-input" rows="14" data-output-label="Output Message"></textarea>
                 </div>
               </div>
