Split pack's tavern for mobile so it doesn't wrap

--- a/public/index.html
+++ b/public/index.html
@@ -678,7 +678,7 @@
               <p>We hope you'll join us downstairs at Pack's Tavern when midnight strikes!</p>
 
               <p>
-                <b><a href="http://packstavern.com/centuryroom/" target="_blank">Pack's Tavern Century Room on the Park</a></b><br>
+                <b><a href="http://packstavern.com/centuryroom/" target="_blank">Pack's Tavern<br>Century Room on the Park</a></b><br>
                 20 South Spruce St.<br>
                 Asheville, NC 28801<br>
                 +1 (828) 225-6944<br><br>
