Bridesmaids is plural. Bridesmaid is singular

--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,7 @@
                 <a href="#groomsmen-section">GROOMSMEN</a>
               </li>
               <li>
-                <a href="#bridesmaid-section">BRIDESMAID</a>
+                <a href="#bridesmaid-section">BRIDESMAIDS</a>
               </li>
               <li>
                 <a href="#rsvp-section">RSVP</a>
@@ -1314,10 +1314,7 @@
             <div class="col-md-offset-2 col-md-8 text-center">
 
               <div class="section-title animation fadeInUp">
-                <h2>
-                                GROOMSMEN
-                              </h2>
-
+                <h2>THE GROOMSMEN</h2>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
                   faucibus. Proin pulvinar congue ex, vitae
@@ -1673,10 +1670,7 @@
             <div class="col-md-offset-2 col-md-8 text-center">
 
               <div class="section-title animation fadeInUp">
-                <h2>
-                                BRIDESMAID
-                              </h2>
-
+                <h2>THE BRIDESMAIDS</h2>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
                   faucibus. Proin pulvinar congue ex, vitae
